syntax = "proto3";
import "google/protobuf/empty.proto";

package demodtelemetry.rpc;

// OUTPUT
message Conf {
    string version                            = 1;
    uint32 refresh_time_ms                    = 2; 
    repeated uint32 windows_duration_settings = 3;
    uint32 power_spread_quantile_low          = 4;
    uint32 power_spread_quantile_high         = 5;
}

message SystemInfo {
    string hostname                    = 1; 
}
message KPIs {
    uint32 channel_id                       = 1;
    uint32 window_duration                  = 2;
    uint64 packet_counters                  = 3;
    float packet_rate_stats                 = 4;
    float stt_stats                         = 5;
    float packet_rate_peak_to_average_ratio = 6;
    float avg_esovern0_stats                = 7;
    float signal_power_stats                = 8;
    float signal_power_spread_stats         = 9;
    float ber_stats                         = 10;
    float freq_drift_stats                  = 11;
}

message KpiResponse {
    repeated KPIs kpis = 1;
}

// INPUT: multi channel / multi window
message PlatformRequest {
    // empty
}

message ChannelWindowRequest {
    uint32 window_duration = 1;
    uint32 channel_id      = 2;
}

message ChannelWindowResponse {
    uint32 window_duration_in_ms = 1;
    uint32 channel_id            = 2;
    KPIs   kpis                  = 3;
}

///////////////////////////////////
message TodoItem {
    string name = 1;
    string description = 2;
    int32 priority = 3;
    bool completed = 4;
}

message GetTodosResponse {
    repeated TodoItem todos = 1;
}

message CreateTodoRequest {
    string name = 1;
    string description = 2;
    int32 priority = 3;
}

message CreateTodoResponse {
    TodoItem todo = 1;
    bool status = 2;
}

////////////////////////////////

service Interface {


 //   rpc platform(PlatformRequest)                  returns (PlatformResponse) {}
 //   rpc platformPerWindow(PlatformWindowRequest)   returns (PlatformWindowResponse) {}
 //   rpc channelKpis(ChannelRequest)                returns (ChannelResponse) {}
  rpc channelKpisPerWindow(ChannelWindowRequest) returns (KpiResponse) {}

    rpc conf(PlatformRequest) returns (Conf) {}
    rpc systemInfo(PlatformRequest) returns (SystemInfo) {}
 //   rpc GetTodos(google.protobuf.Empty) returns (GetTodosResponse);
  //  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);

}  


